; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_luajit.c_laction.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b2/src/extr_luajit.c_laction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIG_DFL = common dso_local global i32 0, align 4
@globalL = common dso_local global i32 0, align 4
@lstop = common dso_local global i32 0, align 4
@LUA_MASKCALL = common dso_local global i32 0, align 4
@LUA_MASKRET = common dso_local global i32 0, align 4
@LUA_MASKCOUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @laction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @laction(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @SIG_DFL, align 4
  %5 = call i32 @signal(i32 %3, i32 %4)
  %6 = load i32, i32* @globalL, align 4
  %7 = load i32, i32* @lstop, align 4
  %8 = load i32, i32* @LUA_MASKCALL, align 4
  %9 = load i32, i32* @LUA_MASKRET, align 4
  %10 = or i32 %8, %9
  %11 = load i32, i32* @LUA_MASKCOUNT, align 4
  %12 = or i32 %10, %11
  %13 = call i32 @lua_sethook(i32 %6, i32 %7, i32 %12, i32 1)
  ret void
}

declare dso_local i32 @signal(i32, i32) #1

declare dso_local i32 @lua_sethook(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
